--- a/products/templates/products/product_create.html
+++ b/products/templates/products/product_create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-Test Product
+Test Product Page
 {% endblock %}
 {% block content %}
 <form action='.' method='POST'> {% csrf_token %}
