--- a/products/templates/products/product_create.html
+++ b/products/templates/products/product_create.html
@@ -1,11 +1,10 @@
 {% extends 'base.html' %}
 {% block title %}
-Test Product Page
+Test Product
 {% endblock %}
 {% block content %}
 <form action='.' method='POST'> {% csrf_token %}
-    <input type='text' name='title' placeholder='Your TEXT' />
+    {{ form.as_p }}
     <input type='submit' value='Save' />
 </form>
-{{ object.price }}
 {% endblock %}
