--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,14 @@
     </title>
 </head>
 <body>
+    <table>
+            <tr>
+                <th><a href="../">Home</a></th>
+                <th><a href="../admin/">Login</a></th>
+                <th><a href="../products/create/">Create</a></th>
+                <th><a href="../products/">Products</a></th>
+            </tr>
+    </table>
     {% block content %}
     {% endblock %}
 </body>
