--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
             <tr>
                 <th><a href="../">Home</a></th>
                 <th><a href="../admin/">Login</a></th>
-                <th><a href="../products/create/">Create</a></th>
+                <th><a href="../products/create">Create</a></th>
                 <th><a href="../products/">Products</a></th>
             </tr>
     </table>
